// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#8992A3",
      "borderWidth": 2,
      "highlightColor": "#DDE1EB",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "#DDE1EB",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#8992A3",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#2541CC",
      "borderWidth": 2,
      "highlightColor": "#DDE1EB",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "#3366FF",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "#DDE1EB",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#2541CC",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#3366FF",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "#3366FF",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#3366FF",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#A6AEBD",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#3366FF",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "#3366FF",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#3366FF",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  disabled={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#DDE1EB",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "#A6AEBD",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#DDE1EB",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "#A6AEBD",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#A6AEBD",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#A6AEBD",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  disabled={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "borderColor": "#DDE1EB",
      "borderWidth": 2,
      "highlightColor": "transparent",
      "highlightSize": 60,
      "innerSize": 24,
      "selectColor": "transparent",
      "size": 36,
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "alignSelf": "center",
            "position": "absolute",
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 30,
            "height": 60,
            "opacity": undefined,
            "width": 60,
          },
        ]
      }
    />
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderColor": "#DDE1EB",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </Component>
  </Component>
</TouchableOpacity>
`;
